data/test/method_as_function/negative/1002.js
const axios = require('axios');
axios.post('https://petstore.swagger.io/v2/pets', {
    foo: 'name',
    bar: 'tag'
});